Primera Guía Lista

--- a/Introducción/IntroduccionPython/introduccionpython.ipynb
+++ b/Introducción/IntroduccionPython/introduccionpython.ipynb
@@ -18,19 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<type 'int'> <type 'float'> <type 'str'> <type 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=2\n",
     "b=3.\n",
@@ -48,26 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n",
-      "0.666666666667\n",
-      "0\n",
-      "8\n",
-      "2.0\n",
-      "Hola Mundo\n",
-      "HolaHolaHola\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print a+b\n",
     "print a/b\n",
@@ -89,19 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Este es un comentario de una linea\n",
     "\n",
@@ -118,25 +87,16 @@
    "metadata": {},
    "source": [
     "##Arreglos##\n",
-    "Los arreglos en Python (llamados listas), a diferencia de otros lenguajes, pueden tener objetos de diferente tipo."
+    "Los arreglos en Python (llamados listas), a diferencia la mayoría de lenguajes, pueden tener objetos de diferente tipo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3.0, 'Hola', False]\n",
-      "[[1, 2], [3, 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista=[a,b,c,d]\n",
     "print lista\n",
@@ -146,24 +106,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Los métodos del objeto tipo lista son los siguientes:\n",
-      "['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__delslice__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getslice__', '__gt__', '__iadd__', '__imul__', '__init__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__setslice__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Los métodos del objeto tipo lista son los siguientes:\"\n",
-    "print [method for method in dir(matriz) if callable(getattr(matriz, method))]"
+    "print [method for method in dir(matriz) if callable(getattr(matriz, method))]\n",
+    "print \"\\n\"+\"\\x1b[31mSi desea saber el funcionamiento particular de alguno de estos métodos, \\ndigite help(<nombre_lista>.<nombre_método>).\\x1b[0m\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Practiquemos un poco###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Tuplas, Conjuntos##\n",
+    "Las tuplas, a diferencia de las listas, son inmutables. Los conjuntos son análogos a los que ya conocemos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tupla=(1,2,3)\n",
+    "tupla.append(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "conjunto={1,2,3,3}\n",
+    "print conjunto\n",
+    "print conjunto.union({2,3,4})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Practiquemos un poco más###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Diccionarios##\n",
+    "Los diccionarios son listas indexadas con Strings (cadenas de carácteres) en vez de números naturales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "diccionario={\"uno\":1, \"nombre\":\"Alex\", \"Estudiantes\":[\"Python\", \"Nada\"]}\n",
+    "print diccionario[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print diccionario[\"uno\"]\n",
+    "print diccionario[\"nombre\"]\n",
+    "print diccionario[\"Estudiantes\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Ciclos##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for x in xrange(10): #xrange(10) es una lista\n",
+    "    print x,\n",
+    "print\n",
+    "\n",
+    "count=0\n",
+    "while (count<10):\n",
+    "    print count,\n",
+    "    count+=1\n",
+    "print \n",
+    "for x in diccionario.iterkeys():\n",
+    "    print x,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Condicionales##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a=21\n",
+    "if a<10:\n",
+    "    print \"%i es menor que 10\"%a\n",
+    "else:\n",
+    "    print \"%i es mayor o igual que 10\"%a\n",
+    "    \n",
+    "b=\"Hola\"\n",
+    "if b==\"Nada\":\n",
+    "    print \"No hay nada\"\n",
+    "elif b==\"Todo\":\n",
+    "    print \"Está todo\"\n",
+    "else:\n",
+    "    print \"El valor es %s\"%b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Ahora usemos todo lo que hemos aprendido###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -190,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
