--- a/Introducción/IntroduccionPython/EjerciciosIntroduccion.ipynb
+++ b/Introducción/IntroduccionPython/EjerciciosIntroduccion.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "También debe recordar que, por sumas de Riemman:\n",
     "\n",
-    "$\\int\\limits_b^a f(x)dx$ existe y es $L$ si y sólo si las sumas inferior y superior tienen el mismo valor ($L$) cuando $\\Delta x \\rightarrow \\inf$."
+    "$\\int\\limits_b^a f(x)dx$ existe y es $L$ si y sólo si las sumas inferior y superior tienen el mismo valor ($L$) cuando $\\Delta x \\rightarrow 0$."
    ]
   },
   {
@@ -158,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
