Corrijo error de ortografía

--- a/Matplotlib/Exercises3D.ipynb
+++ b/Matplotlib/Exercises3D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Exercises #\n",
-    "1) Draw a Viviani's curve with it's solid intersection (sphere and cylinder)."
+    "1) Draw a Viviani's curve with its solid intersection (sphere and cylinder)."
    ]
   },
   {
