Corrección de forma

--- a/Introducción/IntroduccionPython/EjerciciosIntroduccion.ipynb
+++ b/Introducción/IntroduccionPython/EjerciciosIntroduccion.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "3) Sea $f(x)=y=\\sqrt{1-x^2}$ con $x\\in [0,1]$. Sabemos que\n",
     "\n",
-    "$$4\\int\\limits_0^1 \\sqrt{1-x^2}dx=\\pi$$\n",
+    "$4\\int\\limits_0^1 \\sqrt{1-x^2}dx=\\pi$\n",
     "Calcule numéricamente el valor de $\\pi$ con una precisión de 10 decimales comparando el valor de las sumas superiores e inferiores de esta integral. Recomendación: Haga una partición regular de tamaño $\\Delta x$, y con ella calcule el valor de las sumas superiores e inferiores teniendo en cuenta que $f(x)$ es decreciente en el intervalo $[0,1]$.\n",
     "\n",
     "También debe recordar que, por sumas de Riemman:\n",
@@ -79,10 +79,10 @@
    "source": [
     "4) Recuerde que \n",
     "\n",
-    "$$\\sum\\limits^\\mathbb{N}_n \\frac{1}{k^n}=\\prod\\limits_{p\\ primo} \\frac{p^n}{p^n-1}$$\n",
+    "$\\sum\\limits^\\mathbb{N}_n \\frac{1}{k^n}=\\prod\\limits_{p\\ primo} \\frac{p^n}{p^n-1}$\n",
     "\n",
     "Así como que\n",
-    "$$\\prod\\limits_{p\\ primo} \\frac{p^2}{p^2-1}=\\frac{\\pi^2}{6}$$\n",
+    "$\\prod\\limits_{p\\ primo} \\frac{p^2}{p^2-1}=\\frac{\\pi^2}{6}$\n",
     "Calcule $\\pi$ a partir de los primeros 10000 números primos."
    ]
   },
@@ -122,7 +122,7 @@
    "source": [
     "5) Haga un programa que le pida al usuario la parte real e imaginaria de un número complejo. Después imprima en $LaTeX$ el complejo de la forma $z=|z|e^{i\\ arg(z)}$, con sus respectivos valores numéricos. Ejemplo:\n",
     "\n",
-    "$$z=\\sqrt{3}+i=2exp(\\dfrac{i\\pi}{6})$$"
+    "$z=\\sqrt{3}+i=2exp(\\dfrac{i\\pi}{6})$"
    ]
   },
   {
